# image-processing-for-medical-applications

./: .gitignore  LICENSE  README.md
projects/skin-burn-segmentation/: README.md  pyproject.toml
projects/skin-burn-segmentation/src/skinburnsegmentation/: constants.py
projects/skin-burn-segmentation/src/skinburnsegmentation/data_handling/: dataset.py  transforms.py  utils.py
projects/skin-burn-segmentation/src/skinburnsegmentation/data_preprocessing/: transforms.py
projects/skin-burn-segmentation/tests/: test_data_preprocessing.py
